--- a/desafio/desafio-tabela/index.html
+++ b/desafio/desafio-tabela/index.html
@@ -8,12 +8,11 @@
         body {
             font-family: Arial, Helvetica, sans-serif;
         }
-        table {
+        table.exe {
             text-align: center;
         }
-        table.collapse {
+        table#collapse {
             border-collapse: collapse;
-            text-align: ;
         }
         caption {
             padding: 10px;
@@ -22,12 +21,47 @@
         td, th{ 
             border: 1px solid black;
             width: 100px;
-            height: 40px;
+            height: 30px;
+        }
+        table#desafio {
+            border-collapse: collapse;
+        }
+        th {
+            background-color: rgb(95, 95, 95);
+            color: white;
+        }
+        th.inside {
+            background-color: white;
+            color: black;
+        }
+        td.num {
+            text-align: center;
+        }
+        td.num2 {
+            text-align: center;
+            background-color: rgb(95, 95, 95);
+            color: white;
+            font-weight: bold;
+        }
+        .roxo {
+            background-color: purple;
+        }
+        .laranja {
+            background-color: orange;
+        }
+        div#container {
+            overflow-x: auto;
         }
     </style>
 </head>
 <body>
-    <table>
+    <table class="exe">
+        <colgroup>
+            <col class="roxo">
+            <col class="laranja">
+            <col class="roxo">
+            <col class="laranja">
+        </colgroup>
         <tr>
             <td>1</td>
             <td>2</td>
@@ -55,7 +89,7 @@
         </tr>
     </table>
     <hr>
-    <table>
+    <table class="exe">
         <tr>
             <td colspan="4">A</td>
             <td rowspan="4">B</td>
@@ -81,15 +115,15 @@
         </tr>
     </table>
     <hr>
-    <table class="collapse">
+    <table id="collapse">
         <caption>Filmes Favoritos</caption>
         <tr>
-            <th>Grupos</th>
-            <th>Nomes</th>
-            <th colspan="3">Filmes</th>
+            <th scope="col">Grupos</th>
+            <th scope="col">Nomes</th>
+            <th colspan="3" scope="colgroup">Filmes</th>
         </tr>
         <tr>
-            <th rowspan="3">Mulheres</th>
+            <th rowspan="3" scope="rowgroup">Mulheres</th>
             <td>Ana Maria</td>
             <td>Alien</td>
             <td>Rambo</td>
@@ -108,7 +142,7 @@
             <td>Big Hero</td>
         </tr>
         <tr>
-            <th rowspan="3">Homens</th>
+            <th rowspan="3" scope="rowgroup">Homens</th>
             <td>Bruno</td>
             <td>Intocáveis</td>
             <td>Amnésia</td>
@@ -127,5 +161,70 @@
             <td>Toy Story</td>
         </tr>
     </table>
+    <hr>
+    <div id="container">
+        <table id="desafio">
+            <thead>
+            <tr>
+                <th scope="col" rowspan="2">Área</th>
+                <th scope="col" rowspan="2">Disciplinas</th>
+                <th scope="colgroup" colspan="2">Notas</th>
+                <th scope="col" rowspan="2">Média</th>
+            </tr>
+            <tr>
+                <th scope="col">Nota 1</th>
+                <th scope="col">Nota 2</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th class="inside" scope="rowgroup" rowspan="4">Exatas</th>
+                <td>Matemática</td>
+                <td class="num">0.0</td>
+                <td class="num">0.0</td>
+                <td class="num">0.0</td>
+            </tr>
+            <tr>
+                <td>Física</td>
+                <td class="num">0.0</td>
+                <td class="num">0.0</td>
+                <td class="num">0.0</td>
+            </tr>
+            <tr>
+                <td>Química</td>
+                <td class="num">0.0</td>
+                <td class="num">0.0</td>
+                <td class="num">0.0</td>
+            </tr>
+            <tr>
+                <td>Biologia</td>
+                <td class="num">0.0</td>
+                <td class="num">0.0</td>
+                <td class="num">0.0</td>
+            </tr>
+            <tr>
+                <th scope="row" colspan="4">Média de Exatas</th>
+                <td class="num2">0.0</td>
+            </tr>
+            <tr>
+                <th class="inside" scope="rowgroup" rowspan="2">Humanas</th>
+                <td>História</td>
+                <td class="num">0.0</td>
+                <td class="num">0.0</td>
+                <td class="num">0.0</td>
+            </tr>
+            <tr>
+                <td>Geografia</td>
+                <td class="num">0.0</td>
+                <td class="num">0.0</td>
+                <td class="num">0.0</td>
+            </tr>
+            <tr>
+                <th scope="row" colspan="4">Média de Humanas</th>
+                <td class="num2">0.0</td>
+            </tr>
+        </tbody>
+        </table>
+    </div>
 </body>
 </html>
