--- a/exercicios/ex025/form002.html
+++ b/exercicios/ex025/form002.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Teste de Form</h1>
-    <form action="cadastro.php" method="post" autocomplete="on">
+    <form method="post" autocomplete="on">
     <p>
         <label for="user">Usuário: </label>
         <input type="text" name="user" id="user" required minlength="15" size="10" placeholder="digite seu nome" autocomplete="username">
