--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Formulário</h1>
-    <form action="cadastro.php" method="get" autocomplete="on">
+    <form method="get" autocomplete="on">
         <p>
             <label for="username">Nome</label>
             <input type="text" name="username" id="username" maxlength="50" required placeholder="Nome Completo">
