--- a/exercicios/ex025/form001.html
+++ b/exercicios/ex025/form001.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Meu Formulário</h1>
-    <form action="cadastro.php" method="post" autocomplete="off">
+    <form method="post" autocomplete="off">
         <p><label for="onome">Nome:</label>
              <input type="text" name="nome" id="onome"></p>
         <p><label for="osobrenome">Sobrenome:</label>
