--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ata</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/mediaquery.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img id="phone" src="imagens/icon-phone.png" alt="Icone Celular">
+        <img id="print" src="imagens/icon-print.png" alt="Icone Impressora">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Icone Tablet">
+        <img id="pc" src="imagens/icon-pc.png" alt="Icone Computador">
+        <img id="tv" src="imagens/icon-tv.png" alt="Icone Televisão">
+    </main>
 </body>
 </html>
