--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilo/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="estilo/media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>My Site</h1>
         <span id="icon" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
@@ -28,6 +29,15 @@
         </article>
     </main>
     <script>
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 820) {
+            options.style.display = 'block' }
+            else {
+                options.style.display = 'none'
+            }
+        }
+
         function clickMenu() {
            if (options.style.display == 'block') {
             options.style.display = 'none'
